src/objects/Summary_Profile_Custom_Fields__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Includes configuration of custom fields to include on Summary Profile document/page.</description>
    <fields>
        <fullName>Column__c</fullName>
        <description>Column in which this field should show up in the UI</description>
        <inlineHelpText>Column in which this field should show up in the UI</inlineHelpText>
        <label>Column</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Field_Name__c</fullName>
        <label>Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <label>Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Summary Profile Custom Fields</label>
</CustomObject>